# syncode

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests.yml
notebooks/: example_python.ipynb
syncode/: common.py  infer.py  language_model.py
syncode/evaluation/: json_eval.py
syncode/grammar_mask/: grammar_constrainer.py  logits_processor.py
syncode/larkm/: lexer.py
syncode/mask_store/: byte_fsm.py  byte_tokenizer.py  mask_store.py
syncode/parsers/: __init__.py  incremental_parser.py  itergen_parser.py  lexer_rs.py  parser_rs.py  python_parser.py
syncode/parsers/grammars/: go.lark  grammar.py  invariants.lark  java.lark
syncode/parsers/rust_parser/: Cargo.toml  pyproject.toml  setup.py
syncode/parsers/rust_parser/src/: lexer.rs  lib.rs  parser.rs  python_bindings.rs  util.rs
tests/: test_language_model.py  test_lr_parser.py
tests/mask_store/: test_grammar_delims.py
tests/parser/: test_grammar_go.py  test_grammar_java.py  test_rust_lexer.py  test_rust_parser.py
